# llm-wiki-search

./: .gitignore  LICENSE  README.md
tools/wiki-search-mcp/: README.md  pyproject.toml  wiki-search-agent-rules.md
tools/wiki-search-mcp/src/wiki_search_mcp/: config.py  server.py
tools/wiki-search-mcp/src/wiki_search_mcp/index/: indexer.py  manifest.py  watcher.py
tools/wiki-search-mcp/src/wiki_search_mcp/mcp_tools/: reindex.py  status.py
tools/wiki-search-mcp/src/wiki_search_mcp/search/: hybrid_search.py
tools/wiki-search-mcp/tests/: conftest.py  test_indexer.py  test_markdown_chunker.py  test_search.py
wiki/adr/: 001-use-sqlite.md
wiki/architecture/: agents.md  overview.md
wiki/guides/: getting-started.md
