[project]
name = "wiki-search-mcp"
version = "0.1.0"
description = "Local MCP server for searching markdown wikis with FTS5"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/wiki_search_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
